added component swiperFounders

--- a/src/pages/components/commonСomponents/head.html
+++ b/src/pages/components/commonСomponents/head.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="description" content="Free Web tutorials for HTML and CSS">
     <meta name="author" content="SilantievMax">
@@ -10,6 +10,7 @@
     <link rel="icon" href="./images/icon.svg">
     <link rel="stylesheet" href="./styles/main.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
     <script defer src="./scripts/main.js"></script>
 </head>
