--- a/src/pages/components/pageFounders/swiperFounders.html
+++ b/src/pages/components/pageFounders/swiperFounders.html
@@ -1,18 +1,49 @@
-<section class="swiper-founders">
-    <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <img src="./images/founder1.png" />
-          </div>
-          <div class="swiper-slide">
-            <img src="./images/founder2.png" />
-          </div>
-          <div class="swiper-slide">
-            <img src="./images/founder3.png" />
-          </div>
-          <div class="swiper-slide">
-            <img src="./images/founder4.png" />
-          </div>
+<section class="swiper-founders wrapper">
+  <h2 class="heading about-block__heading_center">Основатели</h2>
+    <div class="swiper-founders__items">
+        <div class="swiper-founders__item active">
+            <img class="swiper-founders__images" src="./images/founder1.png" />
+            <span class="swiper-founders__mane">Владислав Милевский</span>
+            <span class="swiper-description">CVO</span>
+            <div class="swiper-founders__hiadeng">
+              <p class="swiper-founders__hiadeng-name">Владислав Милевский</p>
+              <p class="swiper-founders__hiadeng-description">CVO</p>
+              <p class="swiper-founders__hiadeng-hobi">Занимается планированием стратегии работы. Ответственный за привлечение людей в проект. Является руководителем нашего комьюнити в Discord. Строит межличностные отношения между работниками.</p>
+            </div>
         </div>
-      </div>
+        <div class="swiper-founders__item next">
+            <img class="swiper-founders__images" src="./images/founder2.png"/>
+            <span class="swiper-founders__mane">Матвей Шиманович</span>
+            <span class="swiper-description">СМО</span>
+            <div class="swiper-founders__hiadeng">
+              <p class="swiper-founders__hiadeng-name">Матвей Шиманович</p>
+              <p class="swiper-founders__hiadeng-description">СМО</p>
+              <p class="swiper-founders__hiadeng-hobi">Ответственный за все ключевые креативные решения. Продвигает проект Development Corporation в масс медиа. Строит и планирует систему работы копирайтеров, дизайнеров и smm менеджеров.</p>
+            </div>
+        </div>
+        <div class="swiper-founders__item">
+            <img class="swiper-founders__images" src="./images/founder3.png"/>
+            <span class="swiper-founders__mane">Роман Котляров</span>
+            <span class="swiper-description">СОО</span>
+            <div class="swiper-founders__hiadeng">
+              <p class="swiper-founders__hiadeng-name">Роман Котляров</p>
+              <p class="swiper-founders__hiadeng-description">СОО</p>
+              <p class="swiper-founders__hiadeng-hobi">Специалист в области фондового рынка. Строит и планирует систему работы копирайтеров. Разрабатывает стратегии развития проекта Development Corporation.</p>
+            </div>
+        </div>
+        <div class="swiper-founders__item prev">
+            <img class="swiper-founders__images" src="./images/founder4.png"/>
+            <span class="swiper-founders__mane">Святослав Кратик</span>
+            <span class="swiper-description">СЕО</span>
+            <div class="swiper-founders__hiadeng">
+              <p class="swiper-founders__hiadeng-name">Святослав Кратик</p>
+              <p class="swiper-founders__hiadeng-description">CVO</p>
+              <p class="swiper-founders__hiadeng-hobi">Основатель проекта, идейный лидер. Строит основные roadmap проекта, отвечает за принятие стратегияеских решений по развитию Development Corporation. Отвечает за отдел разработок проекта. Работает с инвестиционным фондом проекта. </p>
+            </div>
+        </div>
+        <div class="swiper-founders__button-container">
+            <div class="swiper-founders__button"></div>
+            <div class="swiper-founders__button"></div>
+        </div>
+    </div>
 </section>
