--- a/src/styles/components/pageFounders/swiperFounders.css
+++ b/src/styles/components/pageFounders/swiperFounders.css
@@ -1,23 +1,146 @@
 .swiper-founders {
     padding-top: var(--p-tb-section);
     padding-bottom: var(--p-tb-section);
-    position: relative;
-    width: 600px;
 }
 
-.swiper {
-    width: 100%;
-    padding-top: 50px;
-    padding-bottom: 50px;
-  }
-
-.swiper-slide {
-    display: flex;
-    justify-content: center;
-    width: 600px;
-}
-
-.swiper-slide img {
+.swiper-founders__items {
     display: block;
+    position: relative;
+    height: 750px;
+    margin-top: var(--m-t-content);
+}
+
+.swiper-founders__item {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 492px;
+    overflow: hidden;
+    transition: all 300ms ease-in-out;
+    z-index: -1;
+    opacity: 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-size: 20px;
+}
+
+.swiper-founders__images {
     width: 100%;
+    border-radius: 25px;
+    object-fit: cover;
+    box-shadow: inset 0px 0px 70px rgba(255, 255, 255, 0.2);
+}
+
+.swiper-founders__mane {
+    font-weight: 700;
+    line-height: 44px;
+    color: var(--text-color);
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-top: 33px;
+}
+
+.swiper-description {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    color: var(--text-color);
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin-top: 10px;
+}
+
+.swiper-founders__hiadeng {
+    display: none;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.7);
+    border-radius: 25px;
+    padding: 50px;
+    height: 750px;
+    color: var(--text-color);
+}
+
+
+.swiper-founders__hiadeng-name {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 44px;
+}
+
+.swiper-founders__hiadeng-description {
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
+    margin-top: 10px;
+}
+
+.swiper-founders__hiadeng-hobi {
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 32px;
+    margin-top: 46px;
+}
+
+.swiper-founders__item.active {
+    opacity: 1;
+    z-index: 99;
+    width: 600px;
+    font-size: 36px;
+}
+
+.swiper-founders__item.prev {
+    z-index: 2;
+    opacity: 0.25;
+    transform: translate(-125%, -50%);
+}
+
+.swiper-founders__item.next {
+    z-index: 2;
+    opacity: 0.25;
+    transform: translate(25%, -50%);
+}
+
+.swiper-founders__button-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 275px;
+    z-index: 100;
+}
+
+.swiper-founders__button {
+    color: #fff;
+    font-size: 32px;
+    cursor: pointer;
+    position: relative;
+    opacity: 0.75;
+    transition: all 300ms ease-in-out;
+}
+
+.swiper-founders__button:hover {
+    opacity: 1;
+}
+
+.swiper-founders__button:nth-child(1):before {
+    content: "";
+    position: absolute;
+    left: -699px;
+    top: -83px;
+    background-repeat: no-repeat;
+    background-image: url(../images/prev.svg);
+    width: 50px;
+    height: 50px;
+    z-index: -99;
+}
+
+.swiper-founders__button:nth-child(2):before {    
+    content: "";
+    position: absolute;
+    left: 659px;
+    top: -83px;
+    background-repeat: no-repeat;
+    background-image: url(../images/next.svg);
+    width: 50px;
+    height: 50px;
+    z-index: -99;
 }
