added meta data

--- a/src/pages/components/commonСomponents/head.html
+++ b/src/pages/components/commonСomponents/head.html
@@ -2,8 +2,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
-    <meta name="keywords" content="HTML, CSS, JavaScript">
-    <meta name="description" content="Free Web tutorials for HTML and CSS">
+    <meta name="keywords" content="dc, development corporation, devcorp, дс, девкорп, инновационный проект devcorp, обучение, мотивация, саморазвитие">
+    <meta name="description" content="Начинай учиться, общаться и зарабатывать на своём деле прямо сейчас! Реализуй свои мечты вместе с нами! Мы — новый инновационный проект, направленный на развитие участников экосистемы в разных сферах. На сайте вы познакомитесь с проектом Development Corporation">
     <meta name="author" content="SilantievMax">
     <meta name="theme-color" content="#026FD4">
     <title>@@title</title>
