--- a/src/pages/components/pageProducts/discordCommunity.html
+++ b/src/pages/components/pageProducts/discordCommunity.html
@@ -1,9 +1,9 @@
 <section class="about-block wrapper">
     <h2 class="heading about-block__heading about-block__heading_our-plans"></h2>
     <div class="about-block__block about-block__block-reverse">
-        <img src="./images/tiktok.png" alt="project-founders-network" class="about-block__images">
+        <img src="./images/devcom.png" alt="project-founders-network" class="about-block__images">
         <div class="about-block____right">
-            <h6 class="about-block__title">Discord Community</h6>
+            <h6 class="about-block__title">DevCom</h6>
             <p class="description about-block__description">В нашем дискорде вы можете расширить человеческий капитал, получить знание от более опытных людей в выбранной вами сфере, участвовать в онлайн мероприятиях нашего сообщества. Вы можете выбирать то, как и где вы будете учиться.</p>
         </div>
     </div>
