--- a/src/pages/components/commonСomponents/head.html
+++ b/src/pages/components/commonСomponents/head.html
@@ -1,7 +1,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="dc, development corporation, devcorp, дс, девкорп, инновационный проект devcorp, обучение, мотивация, саморазвитие">
     <meta name="description" content="Начинай учиться, общаться и зарабатывать на своём деле прямо сейчас! Реализуй свои мечты вместе с нами! Мы — новый инновационный проект, направленный на развитие участников экосистемы в разных сферах. На сайте вы познакомитесь с проектом Development Corporation">
     <meta name="author" content="SilantievMax">
