--- a/src/styles/components/commonСomponents/global.css
+++ b/src/styles/components/commonСomponents/global.css
@@ -8,13 +8,18 @@
     --description-size: 20px;
     --text-color: #ffffff;
     --line-image: url("../images/opportunities-line.png");
-    --line-center: url('../images/line-center.png')
+    --line-center: url("../images/line-center.png");
 }
 
 /* Глобальные стили */
 .body {
-    background: linear-gradient(180deg, #026fd4 0%, #2c2c47 54.17%);
-    background-repeat: no-repeat;
+    background: 
+        url(../images/bg01.png) no-repeat top right,
+        url(../images/bg02.png) no-repeat top 877px left,
+        url(../images/bg03.png) no-repeat top 2444px right,
+        url(../images/bg04.png) no-repeat top 3974px left,
+        url(../images/bg05.png) no-repeat top 5268px right,
+        linear-gradient(180deg, #026fd4 0%, #2c2c47 54.17%);
     min-height: 100vh;
 }
 
