--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -73,6 +73,7 @@ ul {
 
 /* Global styles */
 @import "components/commonСomponents/global.css";
+@import "components/commonСomponents/backgrounds.css";
 /*  подключение модулей CSS */
 @import "components/commonСomponents/header.css";
 /* pageHome styles */
