--- a/src/styles/components/commonСomponents/header.css
+++ b/src/styles/components/commonСomponents/header.css
@@ -108,10 +108,34 @@
     .header {
         padding-top: 12px;
         padding-bottom: 12px;
+        position: relative;
     }
 
     .header__nav {
-        display: none;
+        position: fixed;
+        right: -150px;
+        top: 0;
+        transition: right 2s;
+    }
+
+    .header__nav_active {
+        position: fixed;
+        right: 0px;
+        top: 0;
+        visibility: inherit;
+    }
+
+    .header__list {
+        display: flex;
+        flex-direction: column;
+        margin-top: 68px;
+        padding: 20px;
+        background-color: rgba(1, 24, 72, 0.5);
+    }
+
+    .header__item:not(:last-child) {
+        margin-bottom: 10px;
+        margin-right: 0;
     }
 
     .header__wrapper {
