modified components about-block

--- a/src/pages/components/pageHome/project.html
+++ b/src/pages/components/pageHome/project.html
@@ -3,7 +3,7 @@
     <div class="about-block__block">
         <img src="./images/projects.png" alt="project-founders-network" class="about-block__images">
         <div class="about-block__right">
-            <p class="description about-block__description">Интернациональная команда, в которой находятся люди из США, Польши, России, Беларуси, Украины, Германии, Приднестровья, работает над общей целью- сделать знания доступными для всех, продвинуть идею престижного образа жизни через идею усовершенствования человека в физическом, ментальном, финансовом плане. И всё это происходит в рамках нашей экосистемы "Development_corporation", под эгидой которой будет выпущено множество продуктов.</p>
+            <p class="description about-block__description">Интернациональная команда, в которой находятся люди из США, Польши, России, Беларуси, Украины, Германии, Приднестровья, работает над общей целью- сделать знания доступными для всех, продвинуть идею престижного образа жизни через идею усовершенствования человека в физическом, ментальном, финансовом плане.</p>
             <a class="about-block__link" href="./products.html">Подробнее о проекте</a>
         </div>
     </div>
