adaptation for components header, opportunities, projectsCompany

--- a/src/pages/components/pageHome/projectsCompany.html
+++ b/src/pages/components/pageHome/projectsCompany.html
@@ -1,7 +1,7 @@
 <section class="projects-company wrapper">
     <h2 class="heading projects-company__heading">Продукты компании</h2>
     <div class="projects-company__container">
-        <img src="./images/projects-company.svg" alt="Продукты компании" class="projects-company__images">
+        <img src="./images/projects-company.png" alt="Продукты компании" class="projects-company__images">
         <div class="projects-company__circle projects-company__circle_active">
             InVoc
             <span class="projects-company__tooltip">
