--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -80,6 +80,7 @@ ul {
 @import "components/pageHome/opportunities.css";
 @import "components/pageHome/projectsCompany.css";
 @import "components/commonСomponents/aboutBlock.css";
+@import "components/commonСomponents/abourBlockModifier.css";
 @import "components/pageAboutProducts/purposseAndMission.css";
 @import "components/pageFounders/swiperFounders.css";
 @import "components/commonСomponents/footer.css";
