--- a/src/pages/components/pageHome/network.html
+++ b/src/pages/components/pageHome/network.html
@@ -1,8 +1,10 @@
 <section class="about-block wrapper">
     <h2 class="heading about-block__heading about-block__heading_network">Социальные сети</h2>
     <div class="about-block__block">
-        <img src="./images/social-network.png" alt="project-founders-network" class="about-block__images">
-        <div class="about-block____right">
+        <div class="about-block__left">
+            <img src="./images/social-network.png" alt="network" class="about-block__images">
+        </div>
+        <div class="about-block__right">
             <p class="description about-block__description">В современном мире во многих инновационных проектах важную роль занимают социальные сети, ведь благодаря им у людей есть возможность объединяться, принимать активное участие в проектах будущего и мы не исключение. Мы ведём работу по многим направлениям, и соц-сети - одно из них. Мы ведём Telegram, instagram, Discord, TikTok.</p>
             <a class="about-block__link" href="./social-network.html">Подробнее о проекте</a>
         </div>
