--- a/src/styles/components/commonСomponents/aboutBlock.css
+++ b/src/styles/components/commonСomponents/aboutBlock.css
@@ -7,50 +7,10 @@
     content: '';
     display: block;
     position: relative;
-    background-image: var(--line-image);
+    background-image: var(--line-left);
     background-repeat: no-repeat;
     width: 881px;
     height: 20px;
-}
-
-.about-block__heading_center::after {
-    content: '';
-    display: block;
-    position: relative;
-    background-image: var(--line-center);
-    background-repeat: no-repeat;
-    width: 1174px;
-    height: 20px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.about-block__heading_center {
-    text-align: center;
-}
-
-.about-block__heading_project::after {
-    left: -528px;
-}
-
-.about-block__heading_founders::after {
-    left: -443px;
-}
-
-.about-block__heading_network::after {
-    left: -247px;
-}
-
-.about-block__heading_about-community::after {
-    left: -394px;
-}
-
-.about-block__heading_our-plans::after {
-    left: -432px;
-}
-
-.about-block__block-reverse {
-    flex-direction: row-reverse;
 }
 
 .about-block__block {
@@ -60,23 +20,26 @@
     margin-top: var(--m-t-content);
 }
 
-    .about-block__images {
-        max-width: 950px;
-        height: 554px;
-        width: 100%;
-        height: 100%;
-    }
+.about-block__left {
+    flex: 1;
+}
 
+.about-block__images {
+    width: 100%;
+}
 
 .about-block__right {
-    min-width: 500px;
+    flex: 1;
 }
 
 .about-block__description {
-    max-width: 822px;
+    max-height: 175px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .about-block__link {
+    margin-top: 45px;
     display: inline-block;
     font-weight: 300;
     font-size: 20px;
@@ -84,7 +47,6 @@
     border: 1px solid #FFFFFF;
     border-radius: 15px;
     padding: 20px;
-    margin-top: 45px;
     background: linear-gradient(transition);
     background: linear-gradient(92.84deg, #DBADFC 5.36%, rgba(2, 111, 212, 0.8) 57.86%, rgba(255, 255, 255, 0) 100%);
     background-size: 0;
@@ -96,14 +58,71 @@
     background-size: 110%;
 }
 
+
+@media (max-width: 1280px) {
+    .about-block__link {
+        margin-top: 32px;
+    }
+}
+
+@media (max-width: 1024px) {
+    .about-block__description {
+        max-height: 150px;
+    }
+
+    .about-block__link {
+        font-size: 17px;
+    }
+}
+
+@media (max-width: 768px) {
+    .about-block__description {
+        max-height: 130px;
+    }
+
+    .about-block__link {
+        margin-top: 16px;
+    }
+
+    .about-block__link {
+        font-size: 14px;
+    }
+
+    .about-block__left {
+        flex: 1.5;
+    }
+
+    .about-block__right {
+        flex: 1;
+        margin-left: -190px;
+    }
+
+    .about-block__block-reverse .about-block__right {
+        margin-left: 0;
+        margin-right: -190px;
+    }
+}
+
+@media(max-width: 568px) {
+    .about-block__description {
+        max-height: 110px;
+    }
+
+    .about-block__link {
+        margin-top: 10px;
+    }
+}
+
+/* 
+
 .about-block__title {
     font-weight: 700;
     font-size: 36px;
     line-height: 44px;
     color: var(--text-color);
     margin-bottom: 25px;
-}
-
+} */
+/* 
 @media(max-width: 1500px) {
     .about-block__block .about-block__description, .about-block__link {
         position: relative;
@@ -125,9 +144,9 @@
         width: 100%;
         height: 100%;
     }
-}
+} */
 
-@media (max-width: 1024px) {
+/* @media (max-width: 1024px) {
     .about-block__block {
         flex-direction: column;
     }
@@ -135,4 +154,4 @@
     .about-block__right {
         min-width: 100px;
     }
-}
+} */
